--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script src="{{url_for('static', filename='js/script.js')}}"></script>
+    <title>Block?</title>
+    <img width="60" length="60" src="https://mario.wiki.gallery/images/thumb/4/48/Question_Block_Artwork_-_Super_Mario_3D_World.png/1200px-Question_Block_Artwork_-_Super_Mario_3D_World.png"></img>
 </head>
 <body>
-
+    <h1>Block?</h1>
+    <h2>Welcome to Block?! A video-games website for all you gamer geeks :)</h2>
+    <center>
+    <div id="top_div">
+            <button class="button" id="Xbox">Xbox</button>
+            <button class="button" id="Nintendo">Nintendo</button>
+            <button class="button" id="PS">PlayStation</button>     
+    </div>
+    </center>
+    <center>     
+        <img width="200" height="270" src="https://m.media-amazon.com/images/I/81gN4gl9MzL.jpg"></img>
+        <img width="200" height="270" src="https://m.media-amazon.com/images/I/81VGpLvXQuL._AC_UF1000,1000_QL80_.jpg"></img>
+        <img width="200" height="270" src="https://target.scene7.com/is/image/Target/GUEST_0c8a0d59-dd86-43f3-a98a-b0d6439972ab?wid=488&hei=488&fmt=pjpeg"></img>        
+    </center>
 </body>
 </html>
