--- a/Flask-Routing-Lab/templates/cart.html
+++ b/Flask-Routing-Lab/templates/cart.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Cart</title>
+    <h1>Cart</h1>
+    <img width="200" height="270" src="https://m.media-amazon.com/images/I/81gN4gl9MzL.jpg"></img>
+    <h2>Quantity:1</h2>
+    <h2>Totaly cost: 39.90$</h2>
+    <a href="/home">Home Page</a>
+    <img width="200" height="270" src="https://m.media-amazon.com/images/I/81VGpLvXQuL._AC_UF1000,1000_QL80_.jpg"></img>
+    <img width="200" height="270" src="https://target.scene7.com/is/image/Target/GUEST_0c8a0d59-dd86-43f3-a98a-b0d6439972ab?wid=488&hei=488&fmt=pjpeg"></img>    
 </head>
 <body>
 
