--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -10,17 +10,25 @@
 <body>
     <h1>Block?</h1>
     <h2>Welcome to Block?! A video-games website for all you gamer geeks :)</h2>
+    <h1> PLEASE CLICK ONLY ON MINECRAFT IN THE XBOX SECTION
     <center>
-    <div id="top_div">
-            <button class="button" id="Xbox">Xbox</button>
-            <button class="button" id="Nintendo">Nintendo</button>
-            <button class="button" id="PS">PlayStation</button>     
+    <div class="top_div">
+            <div class="top_div" class="divv" id="Xbox">Xbox</div>
+            <div class="top_div" class="divv" id="Nintendo">Nintendo</div>
+            <div class="top_div" class="divv" id="PS">PlayStation</div>     
     </div>
     </center>
     <center>     
         <img width="200" height="270" src="https://m.media-amazon.com/images/I/81gN4gl9MzL.jpg"></img>
         <img width="200" height="270" src="https://m.media-amazon.com/images/I/81VGpLvXQuL._AC_UF1000,1000_QL80_.jpg"></img>
         <img width="200" height="270" src="https://target.scene7.com/is/image/Target/GUEST_0c8a0d59-dd86-43f3-a98a-b0d6439972ab?wid=488&hei=488&fmt=pjpeg"></img>        
+        <h1>Xbox section</h1>
+        <a href="/product"> <img width="200" height="270" src="https://m.media-amazon.com/images/I/81gN4gl9MzL.jpg"></a>
+        <a href=""> <img width="200" height="270" src="https://m.media-amazon.com/images/I/71LSwnEXpXL._SL1500_.jpg"></a>
+        <h1>Nintendo section</h1>
+        <a href=""> <img width="200" height="270" src="https://target.scene7.com/is/image/Target/GUEST_0c8a0d59-dd86-43f3-a98a-b0d6439972ab?wid=488&hei=488&fmt=pjpeg"></a>
+        <a href=""> <img width="200" height="270" src="https://m.media-amazon.com/images/I/81qKst2CMOL._SY500_.jpg"></a>
+        <h1>PlayStation section coming soon ;)</h1>
     </center>
 </body>
 </html>
