--- a/Flask-Routing-Lab/templates/product.html
+++ b/Flask-Routing-Lab/templates/product.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Product</title>
+    <center>      
+        <h1>Minecraft</h1>
+        <img width="200" height="270" src="https://m.media-amazon.com/images/I/81gN4gl9MzL.jpg"></img>
+        <h2>Price:39.90$</h2>
+        <a href="/home">Home Page</a>
+        <a href="/cart">ADD TO CART</a>
+    </center>
 </head>
 <body>
 
